workspace = { members = ["demo"] }
[package]
name = "egui_console"
version = "0.3.0"
edition = "2021"
exclude = [
    ".vscode"
]
license = "MIT"
description = "A Console Window for egui"
repository = "https://github.com/pm100/egui_console"
readme = "README.md"
keywords=["egui","widget","console"]
categories=["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

egui = "0.29.1"
itertools = "0.13.0"

serde = { version = "1.0.204", optional = true }
serde_derive = { version = "1.0.204", optional = true }


[features]
persistence=["dep:serde", "dep:serde_derive"]





